--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,11 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
+    <Button
+            android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Hello World!"/>
+            android:text="测试发送事件"/>
 
 </RelativeLayout>
